2012-08-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp: Add configurable colors in toolbar
	modules.

2012-08-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/tools.lisp: Factorize system usage information collection.
	(start-system-poll): Use a lock file instead of a local variable.

	* contrib/toolbar.lisp: Add memory, cpu and battery usage module
	with a poll methode. More responsive but up to date every 10s by
	default.

2012-08-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp: Add a clickable label module for toolbar.
	Add a clickable entry to open the CLFSWM main menu.
	Add memory, cpu and battery usage module.

	* src/clfswm-menu.lisp (open-menu): Prevent to reopen an opened
	menu. Fixe a but with negative selected-item.

2012-08-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (eval-from-query-string): Show a notify
	window when updating symobls list for REPL completion.
	(show-current-root): New function and configuration menu to
	display a message on the current root.

	* contrib/toolbar.lisp: Add arguments in toolbar modules.

	* src/xlib-util.lisp (event-hook-name): Intern hook name symbol
	in :clfswm package.

2012-08-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp (toolbar-module-text): Print a formatted
	text at module position centered in toolbar.

	* src/xlib-util.lisp (optimize-event-hook): Remove unused event
	hooks.

2012-08-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp: End of toolbar framework.
	(list-toolbar-modules): Add a list toolbar modules function.

2012-08-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-child): Show unmanaged windows
	on (maybe) current child in all roots.

	* src/clfswm-util.lisp (find-child-under-mouse-in-child-tree):
	Handle children from all roots instead of from  *root-frame*.
